@@ -38,6 +38,8 @@ enum _ewl_callback_type
 	EWL_CALLBACK_APPEARANCE_CHANGED,
 	EWL_CALLBACK_FX_STARTED,
 	EWL_CALLBACK_FX_STOPPED,
+	EWL_CALLBACK_WIDGET_ENABLE,
+	EWL_CALLBACK_WIDGET_DISABLE,
 	EWL_CALLBACK_MAX
 };
 
@@ -61,10 +63,12 @@ typedef enum _ewl_state Ewl_State;
 
 enum _ewl_state
 {
-	EWL_STATE_HILITED = 0x1,
-	EWL_STATE_PRESSED = 0x2,
-	EWL_STATE_SELECTED = 0x10,
-	EWL_STATE_DND = 0x20
+	EWL_STATE_NORMAL = (0x1 << 0),
+	EWL_STATE_HILITED = (0x1 << 1),
+	EWL_STATE_PRESSED = (0x1 << 2),
+	EWL_STATE_SELECTED = (0x1 << 3),
+	EWL_STATE_DND = (0x1 << 4),
+	EWL_STATE_DISABLED = (0x1 << 5)
 };
 
 
