@@ -74,14 +74,16 @@ ewl_fx_init_widget(Ewl_Widget * w)
 
 	if (!w->appearance)
 	  {
-		  D(DLEVEL_STABLE, "Widget %p does not have a appearance string\n",
-			   w);
+		  D(DLEVEL_STABLE,
+		    "Widget %p does not have a appearance string\n", w);
 		  DRETURN(DLEVEL_STABLE);
 	  }
 
 	if (strncmp(w->appearance, "/appearance/", 12))
 	  {
-		  D(DLEVEL_STABLE, "Widget %p has this:\n\n\t%s\n\nWierd appearance string\n", w, w->appearance);
+		  D(DLEVEL_STABLE,
+		    "Widget %p has this:\n\n\t%s\n\nWierd appearance string\n",
+		    w, w->appearance);
 		  DRETURN(DLEVEL_STABLE);
 	  }
 
@@ -357,14 +359,17 @@ ewl_fx_timer_add(Ewl_Widget * w, char *name, double interval,
 
 	if (!fxp)
 	  {
-		  D(DLEVEL_STABLE, "Can't add timer since fx proto %s does not exist.\n", name);
+		  D(DLEVEL_STABLE,
+		    "Can't add timer since fx proto %s does not exist.\n",
+		    name);
 		  DRETURN(DLEVEL_STABLE);
 	  }
 
 	if (!w->fx || ewd_list_is_empty(w->fx))
 	  {
-		  D(DLEVEL_STABLE, "Trying to add effect to a widget which doesnt"
-			   "want have info about the effect %s\n", name);
+		  D(DLEVEL_STABLE,
+		    "Trying to add effect to a widget which doesnt"
+		    "want have info about the effect %s\n", name);
 	  }
 	else
 	  {
